# ik-capstone

./: .gitignore  Dockerfile  executive-summary.md  pre_process_data.py  pyproject.toml  readme.md  requirements.txt  spec.md
abo-dataset/: analyze_clusters.py  assign_hierarchy_codes.py  cluster_data.py  embeddings.pkl  pre_process_data.py  unmatched_product_types.csv
